--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Routine Tracker - Deine täglichen Gewohnheiten im Griff</title>
     <meta name="description" content="Eine intuitive App zur Verfolgung deiner täglichen Routinen. Baue gesunde Gewohnheiten auf und verfolge deinen Fortschritt mit Routine Tracker.">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -30,7 +31,7 @@
         <div class="container mx-auto px-6 py-4">
             <div class="flex justify-between items-center">
                 <div class="flex items-center">
-                    <i class="fas fa-check-circle text-blue-600 text-2xl mr-3"></i>
+                    <img src="assets/img/app-icon.png" alt="Routine Tracker App Icon" class="w-8 h-8 mr-3 rounded-lg">
                     <span class="text-xl font-bold text-gray-800">Routine Tracker</span>
                 </div>
                 <div class="hidden md:flex space-x-6">
@@ -153,36 +154,36 @@
             </div>
 
             <div class="grid md:grid-cols-3 gap-8 max-w-4xl mx-auto">
-                <!-- Screenshot Placeholder 1 -->
+                <!-- Screenshot 1 - Main Page -->
                 <div class="screenshot-container bg-white rounded-2xl p-4 shadow-lg">
-                    <div class="bg-gradient-to-br from-blue-500 to-purple-600 rounded-xl aspect-[9/16] flex items-center justify-center text-white">
-                        <div class="text-center">
-                            <i class="fas fa-mobile-alt text-6xl mb-4 opacity-50"></i>
-                            <p class="text-lg font-semibold">Hauptbildschirm</p>
-                            <p class="text-sm opacity-75">Routinen-Übersicht</p>
-                        </div>
+                    <img src="assets/img/Main_page.jpg" 
+                         alt="Routine Tracker Hauptbildschirm - Tagesübersicht mit Routinen" 
+                         class="w-full rounded-xl shadow-lg">
+                    <div class="text-center mt-4">
+                        <p class="text-lg font-semibold text-gray-800">Hauptbildschirm</p>
+                        <p class="text-sm text-gray-600">Routinen-Übersicht</p>
                     </div>
                 </div>
 
-                <!-- Screenshot Placeholder 2 -->
+                <!-- Screenshot 2 - Status Page -->
                 <div class="screenshot-container bg-white rounded-2xl p-4 shadow-lg">
-                    <div class="bg-gradient-to-br from-green-500 to-blue-600 rounded-xl aspect-[9/16] flex items-center justify-center text-white">
-                        <div class="text-center">
-                            <i class="fas fa-chart-bar text-6xl mb-4 opacity-50"></i>
-                            <p class="text-lg font-semibold">Statistiken</p>
-                            <p class="text-sm opacity-75">Fortschritt verfolgen</p>
-                        </div>
+                    <img src="assets/img/Status_page.jpg" 
+                         alt="Routine Tracker Statistiken - Fortschritt und Analysen" 
+                         class="w-full rounded-xl shadow-lg">
+                    <div class="text-center mt-4">
+                        <p class="text-lg font-semibold text-gray-800">Statistiken</p>
+                        <p class="text-sm text-gray-600">Fortschritt verfolgen</p>
                     </div>
                 </div>
 
-                <!-- Screenshot Placeholder 3 -->
+                <!-- Screenshot 3 - Settings Page -->
                 <div class="screenshot-container bg-white rounded-2xl p-4 shadow-lg">
-                    <div class="bg-gradient-to-br from-purple-500 to-pink-600 rounded-xl aspect-[9/16] flex items-center justify-center text-white">
-                        <div class="text-center">
-                            <i class="fas fa-cog text-6xl mb-4 opacity-50"></i>
-                            <p class="text-lg font-semibold">Einstellungen</p>
-                            <p class="text-sm opacity-75">Personalisierung</p>
-                        </div>
+                    <img src="assets/img/Settings_page.jpg" 
+                         alt="Routine Tracker Einstellungen - Personalisierung und Konfiguration" 
+                         class="w-full rounded-xl shadow-lg">
+                    <div class="text-center mt-4">
+                        <p class="text-lg font-semibold text-gray-800">Einstellungen</p>
+                        <p class="text-sm text-gray-600">Personalisierung</p>
                     </div>
                 </div>
             </div>
@@ -233,7 +234,7 @@
                 <!-- App Info -->
                 <div>
                     <div class="flex items-center mb-4">
-                        <i class="fas fa-check-circle text-blue-500 text-2xl mr-3"></i>
+                        <img src="assets/img/app-icon.png" alt="Routine Tracker App Icon" class="w-8 h-8 mr-3 rounded-lg">
                         <span class="text-xl font-bold text-white">Routine Tracker</span>
                     </div>
                     <p class="text-gray-400 mb-4">
