--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
                     Verfolge deine täglichen Routinen, baue Streaks auf und erreiche deine Ziele mit der intuitiven Routine Tracker App.
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-                    <a href="#download" class="bg-white text-blue-600 px-8 py-4 rounded-full font-semibold text-lg hover:bg-blue-50 transition shadow-lg">
-                        <i class="fab fa-apple mr-2"></i>Für iOS herunterladen
+                    <a href="#download" class="bg-green-500 text-white px-10 py-5 rounded-full font-semibold text-xl hover:bg-green-600 transition shadow-lg">
+                        <i class="fab fa-google-play mr-3"></i>Für Android herunterladen
                     </a>
-                    <a href="#download" class="bg-green-500 text-white px-8 py-4 rounded-full font-semibold text-lg hover:bg-green-600 transition shadow-lg">
-                        <i class="fab fa-google-play mr-2"></i>Für Android herunterladen
-                    </a>
+                    <p class="text-blue-100 text-sm mt-2">
+                        📱 Bald auch für iOS verfügbar
+                    </p>
                 </div>
             </div>
         </div>
@@ -198,31 +198,29 @@
                 Lade Routine Tracker heute herunter und beginne deine Reise zu besseren Gewohnheiten.
             </p>
             
-            <div class="flex flex-col sm:flex-row gap-6 justify-center items-center mb-12">
-                <!-- iOS Download Button -->
-                <a href="#" class="bg-black text-white px-8 py-4 rounded-xl flex items-center gap-3 hover:bg-gray-800 transition shadow-lg">
-                    <i class="fab fa-apple text-2xl"></i>
-                    <div class="text-left">
-                        <p class="text-xs opacity-75">Download im</p>
-                        <p class="text-lg font-semibold">App Store</p>
-                    </div>
-                </a>
-
+            <div class="flex flex-col gap-6 justify-center items-center mb-12">
                 <!-- Android Download Button -->
-                <a href="#" class="bg-black text-white px-8 py-4 rounded-xl flex items-center gap-3 hover:bg-gray-800 transition shadow-lg">
-                    <i class="fab fa-google-play text-2xl"></i>
+                <a href="#" class="bg-green-600 text-white px-12 py-6 rounded-xl flex items-center gap-4 hover:bg-green-700 transition shadow-lg transform hover:scale-105">
+                    <i class="fab fa-google-play text-3xl"></i>
                     <div class="text-left">
-                        <p class="text-xs opacity-75">Jetzt bei</p>
-                        <p class="text-lg font-semibold">Google Play</p>
+                        <p class="text-sm opacity-90">Jetzt kostenlos bei</p>
+                        <p class="text-2xl font-bold">Google Play</p>
                     </div>
                 </a>
+                
+                <!-- Coming Soon iOS -->
+                <div class="text-center text-blue-100">
+                    <p class="text-lg font-semibold mb-2">🍎 iOS Version in Entwicklung</p>
+                    <p class="text-sm opacity-75">Bald auch im App Store verfügbar</p>
+                </div>
             </div>
 
             <!-- App Info -->
             <div class="text-center text-blue-100">
-                <p class="mb-2">📱 Kompatibel mit iOS 15.0+ und Android 8.0+</p>
+                <p class="mb-2">🤖 Kompatibel mit Android 8.0+ (API Level 26+)</p>
                 <p class="mb-2">🌟 Kostenlos • Keine Werbung • Keine In-App-Käufe</p>
-                <p>🔒 100% Datenschutz • Offline funktionsfähig</p>
+                <p class="mb-1">🔒 100% Datenschutz • Offline funktionsfähig</p>
+                <p class="text-sm opacity-75">📱 iOS Version folgt in Kürze</p>
             </div>
         </div>
     </section>
@@ -252,6 +250,15 @@
                     </ul>
                 </div>
 
+                <!-- Legal -->
+                <div>
+                    <h4 class="text-lg font-semibold text-white mb-4">Rechtliches</h4>
+                    <ul class="space-y-2">
+                        <li><a href="datenschutz.html" class="hover:text-blue-400 transition">Datenschutzerklärung</a></li>
+                        <li><a href="impressum.html" class="hover:text-blue-400 transition">Impressum</a></li>
+                    </ul>
+                </div>
+
                 <!-- Contact -->
                 <div>
                     <h4 class="text-lg font-semibold text-white mb-4">Kontakt</h4>
@@ -268,6 +275,10 @@
 
             <div class="border-t border-gray-700 pt-8 mt-8 text-center text-gray-400">
                 <p>&copy; 2025 Routine Tracker. Alle Rechte vorbehalten.</p>
+                <p class="mt-2">
+                    <a href="datenschutz.html" class="hover:text-blue-400 transition">Datenschutzerklärung</a> • 
+                    <a href="impressum.html" class="hover:text-blue-400 transition">Impressum</a>
+                </p>
                 <p class="mt-2">Made with ❤️ for better habits</p>
             </div>
         </div>
