update on imprint

--- a/impressum.html
+++ b/impressum.html
@@ -1,133 +1,200 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Impressum - Routine Tracker</title>
-    <meta name="description" content="Impressum für die Routine Tracker App - Rechtliche Informationen und Kontakt.">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-50">
+    <meta
+      name="description"
+      content="Impressum für die Routine Tracker App - Rechtliche Informationen und Kontakt."
+    />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="bg-gray-50">
     <!-- Header -->
     <nav class="bg-white shadow-lg">
-        <div class="container mx-auto px-6 py-4">
-            <div class="flex justify-between items-center">
-                <a href="index.html" class="flex items-center">
-                    <img src="assets/img/app-icon.png" alt="Routine Tracker App Icon" class="w-8 h-8 mr-3 rounded-lg">
-                    <span class="text-xl font-bold text-gray-800">Routine Tracker</span>
-                </a>
-                <a href="index.html" class="text-gray-600 hover:text-blue-600 transition">← Zurück zur Startseite</a>
-            </div>
+      <div class="container mx-auto px-6 py-4">
+        <div class="flex justify-between items-center">
+          <a href="index.html" class="flex items-center">
+            <img
+              src="assets/img/app-icon.png"
+              alt="Routine Tracker App Icon"
+              class="w-8 h-8 mr-3 rounded-lg"
+            />
+            <span class="text-xl font-bold text-gray-800">Routine Tracker</span>
+          </a>
+          <a
+            href="index.html"
+            class="text-gray-600 hover:text-blue-600 transition"
+            >← Zurück zur Startseite</a
+          >
         </div>
+      </div>
     </nav>
 
     <!-- Content -->
     <div class="container mx-auto px-6 py-12">
-        <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-8">
-            <h1 class="text-3xl font-bold text-gray-800 mb-8">Impressum</h1>
-            
-            <div class="prose prose-lg max-w-none">
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4">Angaben gemäß § 5 TMG</h2>
-                
-                <div class="bg-blue-50 border border-blue-200 rounded-lg p-6 mb-6">
-                    <h3 class="text-lg font-semibold text-blue-800 mb-3">Entwickler und Betreiber</h3>
-                    <p class="text-blue-700 mb-2">
-                        <strong>Sebastian Rothe</strong><br>
-                        Softwareentwickler
-                    </p>
-                    <p class="text-blue-700 mb-2">
-                        <strong>E-Mail:</strong> contact@sebastianrothe.dev<br>
-                        <strong>Website:</strong> <a href="https://sebastianrothe.dev" class="underline">sebastianrothe.dev</a>
-                    </p>
-                </div>
+      <div class="max-w-4xl mx-auto bg-white rounded-lg shadow-lg p-8">
+        <h1 class="text-3xl font-bold text-gray-800 mb-8">Impressum</h1>
 
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">Kontakt</h2>
-                <p class="mb-6 text-gray-600">
-                    Für Fragen, Anregungen oder Support zur Routine Tracker App:
-                </p>
-                <ul class="list-disc list-inside mb-6 text-gray-600">
-                    <li><strong>Support:</strong> support@routinetracker.app</li>
-                    <li><strong>Allgemeine Anfragen:</strong> hello@routinetracker.app</li>
-                    <li><strong>Datenschutz:</strong> privacy@routinetracker.app</li>
-                    <li><strong>GitHub:</strong> <a href="https://github.com/Sebastian-Rothe" class="text-blue-600 underline">Sebastian-Rothe</a></li>
-                </ul>
+        <div class="prose prose-lg max-w-none">
+          <h2 class="text-2xl font-semibold text-gray-800 mb-4">
+            Angaben gemäß § 5 TMG
+          </h2>
 
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV</h2>
-                <p class="mb-6 text-gray-600">
-                    Sebastian Rothe<br>
-                    (Anschrift siehe oben)
-                </p>
+          <div class="bg-blue-50 border border-blue-200 rounded-lg p-6 mb-6">
+            <h3 class="text-lg font-semibold text-blue-800 mb-3">
+              Entwickler und Betreiber
+            </h3>
+            <p class="text-blue-700 mb-2">
+              <strong>Sebastian Rothe</strong><br />
+              Softwareentwickler
+            </p>
+            <p class="text-blue-700 mb-2">
+              <strong>E-Mail:</strong> mail@sebastian-rothe.com<br />
+              <strong>Website:</strong>
+              <a href="https://sebastian-rothe.com" class="underline"
+                >sebastian-rothe.com</a
+              >
+            </p>
+          </div>
 
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">Haftung für Inhalte</h2>
-                <p class="mb-4 text-gray-600">
-                    Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den 
-                    allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht 
-                    unter der Verpflichtung, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach 
-                    Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.
-                </p>
+          <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">
+            Kontakt
+          </h2>
+          <p class="mb-6 text-gray-600">
+            Für Fragen, Anregungen oder Support zur Routine Tracker App:
+          </p>
+          <ul class="list-disc list-inside mb-6 text-gray-600">
+            <li><strong>Support:</strong> mail@sebastian-rothe.com</li>
+            <li>
+              <strong>Allgemeine Anfragen:</strong> mail@sebastian-rothe.com
+            </li>
+            <li><strong>Datenschutz:</strong> mail@sebastian-rothe.com</li>
+            <li>
+              <strong>GitHub:</strong>
+              <a
+                href="https://github.com/Sebastian-Rothe"
+                class="text-blue-600 underline"
+                >Sebastian-Rothe</a
+              >
+            </li>
+          </ul>
 
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">Haftung für Links</h2>
-                <p class="mb-6 text-gray-600">
-                    Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. 
-                    Deshalb können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten 
-                    Seiten ist stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich.
-                </p>
+          <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">
+            Verantwortlich für den Inhalt nach § 18 Abs. 2 MStV
+          </h2>
+          <p class="mb-6 text-gray-600">
+            Sebastian Rothe<br />
+            Mühlwehrstr. 8<br />
+            60488 Frankfurt am Main<br />
+            Deutschland<br />
+          </p>
 
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">Urheberrecht</h2>
-                <p class="mb-6 text-gray-600">
-                    Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen 
-                    Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der 
-                    Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.
-                </p>
+          <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">
+            Haftung für Inhalte
+          </h2>
+          <p class="mb-4 text-gray-600">
+            Als Diensteanbieter sind wir nach den allgemeinen Gesetzen für
+            eigene Inhalte auf diesen Seiten verantwortlich (§ 7 Abs. 1 TMG).
+            Nach den §§ 8–10 TMG sind wir als Diensteanbieter jedoch nicht
+            verpflichtet, übermittelte oder gespeicherte fremde Informationen zu
+            überwachen oder nach Umständen zu forschen, die auf eine
+            rechtswidrige Tätigkeit hinweisen.
+          </p>
 
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">Über die App</h2>
-                <div class="bg-green-50 border-l-4 border-green-400 p-6 mb-6">
-                    <h3 class="text-lg font-semibold text-green-800 mb-2">Routine Tracker</h3>
-                    <p class="text-green-700 mb-2">
-                        Eine kostenlose Android-App zur Verfolgung täglicher Gewohnheiten und Routinen.
-                    </p>
-                    <ul class="list-disc list-inside text-green-700 text-sm">
-                        <li>100% kostenlos und werbefrei</li>
-                        <li>Lokale Datenspeicherung (keine Cloud)</li>
-                        <li>Open Source auf GitHub verfügbar</li>
-                        <li>Entwickelt mit React Native und Expo</li>
-                    </ul>
-                </div>
+          <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">
+            Haftung für Links
+          </h2>
+          <p class="mb-6 text-gray-600">
+            Unser Angebot enthält Links zu externen Websites Dritter, auf deren
+            Inhalte wir keinen Einfluss haben. Deshalb können wir für diese
+            fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der
+            verlinkten Seiten ist stets der jeweilige Anbieter oder Betreiber
+            der Seiten verantwortlich.
+          </p>
 
-                <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">Streitschlichtung</h2>
-                <p class="mb-6 text-gray-600">
-                    Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: 
-                    <a href="https://ec.europa.eu/consumers/odr/" class="text-blue-600 underline">https://ec.europa.eu/consumers/odr/</a>. 
-                    Unsere E-Mail-Adresse finden Sie oben im Impressum.
-                </p>
-                <p class="mb-6 text-gray-600">
-                    Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer 
-                    Verbraucherschlichtungsstelle teilzunehmen.
-                </p>
+          <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">
+            Urheberrecht
+          </h2>
+          <p class="mb-6 text-gray-600">
+            Die durch die Seitenbetreiber erstellten Inhalte und Werke auf
+            diesen Seiten unterliegen dem deutschen Urheberrecht. Die
+            Vervielfältigung, Bearbeitung, Verbreitung und jede Art der
+            Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der
+            schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.
+          </p>
 
-                <div class="mt-8 pt-6 border-t border-gray-200">
-                    <p class="text-sm text-gray-500">
-                        Stand: 29. September 2025<br>
-                        Dieses Impressum gilt für die Routine Tracker Website und Mobile App.
-                    </p>
-                </div>
-            </div>
+          <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">
+            Über die App
+          </h2>
+          <div class="bg-green-50 border-l-4 border-green-400 p-6 mb-6">
+            <h3 class="text-lg font-semibold text-green-800 mb-2">
+              Routine Tracker
+            </h3>
+            <p class="text-green-700 mb-2">
+              Eine kostenlose Android-App zur Verfolgung täglicher Gewohnheiten
+              und Routinen.
+            </p>
+            <ul class="list-disc list-inside text-green-700 text-sm">
+              <li>100% kostenlos und werbefrei</li>
+              <li>Lokale Datenspeicherung (keine Cloud)</li>
+              <li>Open Source auf GitHub verfügbar</li>
+              <li>Entwickelt mit React Native und Expo</li>
+            </ul>
+          </div>
+
+          <h2 class="text-2xl font-semibold text-gray-800 mb-4 mt-8">
+            Streitschlichtung
+          </h2>
+          <p class="mb-6 text-gray-600">
+            Die Europäische Kommission stellt eine Plattform zur
+            Online-Streitbeilegung (OS) bereit:
+            <a
+              href="https://ec.europa.eu/consumers/odr/"
+              class="text-blue-600 underline"
+              >https://ec.europa.eu/consumers/odr/</a
+            >. Unsere E-Mail-Adresse finden Sie oben im Impressum.
+          </p>
+          <p class="mb-6 text-gray-600">
+            Wir sind nicht bereit oder verpflichtet, an
+            Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle
+            teilzunehmen.
+          </p>
+
+          <div class="mt-8 pt-6 border-t border-gray-200">
+            <p class="text-sm text-gray-500">
+              Stand: 29. September 2025<br />
+              Dieses Impressum gilt für die Routine Tracker Website und Mobile
+              App.
+            </p>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- Footer -->
     <footer class="bg-gray-800 text-gray-300 py-8 mt-12">
-        <div class="container mx-auto px-6 text-center">
-            <div class="flex items-center justify-center mb-4">
-                <img src="assets/img/app-icon.png" alt="Routine Tracker App Icon" class="w-6 h-6 mr-2 rounded">
-                <span class="font-semibold">Routine Tracker</span>
-            </div>
-            <p class="text-sm">
-                <a href="index.html" class="hover:text-blue-400">Startseite</a> • 
-                <a href="datenschutz.html" class="hover:text-blue-400">Datenschutzerklärung</a>
-            </p>
+      <div class="container mx-auto px-6 text-center">
+        <div class="flex items-center justify-center mb-4">
+          <img
+            src="assets/img/app-icon.png"
+            alt="Routine Tracker App Icon"
+            class="w-6 h-6 mr-2 rounded"
+          />
+          <span class="font-semibold">Routine Tracker</span>
         </div>
+        <p class="text-sm">
+          <a href="index.html" class="hover:text-blue-400">Startseite</a> •
+          <a href="datenschutz.html" class="hover:text-blue-400"
+            >Datenschutzerklärung</a
+          >
+        </p>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
