--- a/impressum.html
+++ b/impressum.html
@@ -13,6 +13,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
   </head>
   <body class="bg-gray-50">
     <!-- Header -->
@@ -27,11 +28,15 @@
             />
             <span class="text-xl font-bold text-gray-800">Routine Tracker</span>
           </a>
-          <a
-            href="index.html"
-            class="text-gray-600 hover:text-blue-600 transition"
-            >← Zurück zur Startseite</a
-          >
+          <div class="flex items-center space-x-4">
+            <a href="index.html" class="text-gray-600 hover:text-blue-600 transition">
+              <i class="fas fa-home mr-2"></i>Home
+            </a>
+            <button id="lang-toggle" class="flex items-center space-x-2 px-3 py-2 rounded-lg border border-gray-200 hover:bg-gray-50 transition">
+              <i class="fas fa-globe text-gray-600"></i>
+              <span class="text-sm font-medium text-gray-700">DE</span>
+            </button>
+          </div>
         </div>
       </div>
     </nav>
@@ -196,5 +201,13 @@
         </p>
       </div>
     </footer>
+    <script>
+      // function switchToEnglish() {
+      //   window.location.href = 'impressum-en.html';
+      // }
+        document.getElementById('lang-toggle').addEventListener('click', () => {
+            window.location.href = 'impressum-en.html';
+        });
+    </script>
   </body>
 </html>
