fix faviocn - show for all pages

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -5,7 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Datenschutzerklärung - Routine Tracker</title>
     <meta name="description" content="Datenschutzerklärung für die Routine Tracker App - Ihre Privatsphäre ist uns wichtig.">
-    <link rel="icon" type="image/png" href="favicon.png">
+    <!-- Favicon and App Icons -->
+    <link rel="icon" href="assets/img/favicon_io/favicon.ico?v=3" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/img/favicon_io/favicon-16x16.png?v=3"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/img/favicon_io/favicon-32x32.png?v=3"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/img/favicon_io/apple-touch-icon.png?v=3"
+    />
+    <link rel="manifest" href="assets/img/favicon_io/site.webmanifest?v=3" />
+    <meta name="msapplication-TileColor" content="#667eea" />
+    <meta name="theme-color" content="#667eea" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
