--- a/datenschutz-en.html
+++ b/datenschutz-en.html
@@ -11,6 +11,14 @@
     <link rel="icon" href="assets/img/favicon_io/favicon.ico?v=3">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon_io/favicon-16x16.png?v=3">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon_io/favicon-32x32.png?v=3">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/img/favicon_io/apple-touch-icon.png?v=3"
+    />
+    <link rel="manifest" href="assets/img/favicon_io/site.webmanifest?v=3" />
+    <meta name="msapplication-TileColor" content="#667eea" />
+    <meta name="theme-color" content="#667eea" />
     
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
