--- a/impressum-en.html
+++ b/impressum-en.html
@@ -24,6 +24,14 @@
       sizes="32x32"
       href="assets/img/favicon_io/favicon-32x32.png?v=3"
     />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/img/favicon_io/apple-touch-icon.png?v=3"
+    />
+    <link rel="manifest" href="assets/img/favicon_io/site.webmanifest?v=3" />
+    <meta name="msapplication-TileColor" content="#667eea" />
+    <meta name="theme-color" content="#667eea" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
