update email address

--- a/datenschutz-en.html
+++ b/datenschutz-en.html
@@ -181,7 +181,7 @@
                         If you have questions about this Privacy Policy, please contact us:
                     </p>
                     <div class="bg-gray-50 p-4 rounded-lg">
-                        <p><strong>Email:</strong> support@routinetracker.app</p>
+                        <p><strong>Email:</strong> mail@sebastian-rothe.com</p>
                         <p><strong>Developer:</strong> Sebastian Rothe</p>
                         <p><strong>Response Time:</strong> We aim to respond within 48 hours</p>
                     </div>
