add new size for favicon

--- a/index.html
+++ b/index.html
@@ -49,25 +49,37 @@
     <link rel="alternate" hreflang="x-default" href="https://tracker-app-webpage.netlify.app/">
 
     <!-- Favicon and App Icons -->
-    <link rel="icon" href="assets/img/favicon_io/favicon.ico?v=3" />
+    <link rel="icon" href="assets/img/favicon_io/favicon.ico?v=4" />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="assets/img/favicon_io/favicon-16x16.png?v=3"
+      href="assets/img/favicon_io/favicon-16x16.png?v=4"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="assets/img/favicon_io/favicon-32x32.png?v=3"
+      href="assets/img/favicon_io/favicon-32x32.png?v=4"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="assets/img/favicon_io/android-chrome-192x192.png?v=4"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="512x512"
+      href="assets/img/favicon_io/android-chrome-512x512.png?v=4"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="assets/img/favicon_io/apple-touch-icon.png?v=3"
+      href="assets/img/favicon_io/apple-touch-icon.png?v=4"
     />
-    <link rel="manifest" href="assets/img/favicon_io/site.webmanifest?v=3" />
+    <link rel="manifest" href="assets/img/favicon_io/site.webmanifest?v=4" />
     <meta name="msapplication-TileColor" content="#667eea" />
     <meta name="theme-color" content="#667eea" />
 
